--- a/portfolio.html
+++ b/portfolio.html
@@ -179,7 +179,7 @@
     <footer class="basement">
       <div class="container flexy">
         <div class="basement-logo-and-address">
-          <a href="index.html" class="basement-logo logo-main">
+          <a href="index.html" class="basement__logo logo-main">
             <span class="logo-main__accent">Web</span><span class="basement-logo">Studio</span>
           </a>
           <address class="basement-address">
